manifest-hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amorphie-workflow-hub
  namespace: amorphie-workflow-hub
spec:
  selector:
    matchLabels:
      app: amorphie-workflow-hub
  replicas: 1
  template:
    metadata:
      labels:
        app: amorphie-workflow-hub
      annotations:
        dapr.io/app-id: amorphie-workflow-hub
        dapr.io/enabled: 'true'
        dapr.io/app-port: '5000'
    spec:
      serviceAccountName: amorphie-workflow-hubuser
      containers:
        - name: amorphie-workflow-hub
          image: burganbank/amorphie.workflow-hub:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "4096Mi"
            requests:
              cpu: "0.1"
              memory: "64Mi"
