manifest-hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amorphie-workflow-hub
  namespace: amorphie-workflow-hub
spec:
  selector: 
    app: amorphie-workflow-hub
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
